deploy/argocd/apps/rook/kustomize/httproute-s3/s3-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-s3
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    namespace: istio-system
    sectionName: https
  hostnames:
  - "s3.PLACEHOLDER.example.com"  # Patched via Kustomize from common.domain
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: rook-ceph-rgw-ceph-objectstore
      port: 80
      weight: 1
